# autotester

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
projects/buggy/: checks_buggy.py  intent.md  rubric.json  strategies_buggy.py
projects/jeevn/: checks_jeevn.py  intent.md  profile.json  rubric.json  strategies_jeevn.py
scripts/: check_key.py  check_llm_wrapper.py  probe_jeevn.py  selftest_fixture.py  selftest_orchestrator.py  smoke_trace.py
src/auto_tester/: __init__.py  bootstrap.py  cli.py  code_scan.py  config.py  discover.py  hypothesis_runner.py  input_gen.py  llm.py  llm_oracles.py  oracle_gen.py  orchestrator.py  registry.py  rubric.py  strategy_gen.py  templates.py
src/auto_tester/adapters/: __init__.py  buggy_adapter.py  generic_adapter.py  jeevn_adapter.py
src/auto_tester/core/: __init__.py  adapter.py  checks.py  evaluator.py  models.py  reporter.py  runner.py  tracer.py
src/auto_tester/fixtures/: __init__.py  buggy_pipeline.py
templates/: README.md  focus.md  intent.md
tests/: test_fixture_oracles.py  test_hypothesis_fuzz.py  test_inplace_e2e.py  test_orchestrator_resilience.py  test_profile_validation.py
