[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-tester"
version = "0.1.0"
description = "An AI QA agent that black-box tests multi-step pipelines for subtle correctness bugs"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.3",  # Gemini API (LLM oracles)
    "httpx>=0.27",        # drives target pipelines over HTTP
    "python-dotenv>=1.0", # loads GEMINI_API_KEY from .env
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
auto-tester = "auto_tester.cli:main"
autotester = "auto_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
